Tue Nov  7 09:04:15 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/RMCast/RMCast.h:
          Undefine macro MT_DATA if defined already.

Tue Nov  7 09:00:08 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          By default build everything under ACE_wrappers and
          ACE_wrappers/TAO, we used to build just a subset of ACE.
          We need to provide full coverage because this script is
          replacing all nightly builds, if auto_compile does not test it,
          nothing will.

        * bin/show_log_dir.pl:
          The script was removing the second and third most recent logs
          from the list, this used to be required to remove the brief and
          html files, but now we filter those earlier on the script.

Mon Nov  6 16:23:56 2000  Carlos O'Ryan  <coryan@uci.edu>

        * tests/RMCast/RMCast_Fragment_Test.cpp:
        * tests/RMCast/RMCast_Reassembly_Test.cpp:
        * tests/RMCast/RMCast_Retransmission_Test.cpp:
          Fixed warnings reported by DU/CXX

Sun Nov  5 17:23:55 2000  Carlos O'Ryan  <coryan@uci.edu>

        * etc/ace.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/tao.doxygen:
        * etc/tao_dynamicany.doxygen:
        * etc/tao_dynamicinterface.doxygen:
        * etc/tao_esf.doxygen:
        * etc/tao_iormanip.doxygen:
        * etc/tao_iortable.doxygen:
        * etc/tao_portableserver.doxygen:
        * etc/tao_rtevent.doxygen:
          Commit doxygen templates, I'm still writing the script to use
          them effectively.

Sun Nov  5 14:37:13 2000  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_compile:
          Make log files world readable, under Solaris they are created
          with 600 mode by default.

Sun Nov  5 14:05:13 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/create_vt_dsps.pl:
        * tests/version_tests/Atomic_Op_Test.dsp:
        * tests/version_tests/Auto_IncDec_Test.dsp: